Update requirements.txt with new dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,27 @@
 ansi2html==1.8.0
 anyio==3.7.1
+asttokens
+attrs
+backcall
+backports.functools-lru-cache
+bcrypt==4.0.1
 blinker==1.6.2
 certifi==2023.5.7
 charset-normalizer==3.2.0
 click==8.1.6
+colorama 
+comm 
 dash==2.11.1
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
+debugpy 
+decorator
 dnspython==2.4.2
 email-validator==2.0.0.post2
 exceptiongroup==1.2.0
+executing 
+fastjsonschema 
 Flask==2.2.5
 Flask-Bcrypt==1.0.1
 Flask-Login==0.6.2
@@ -21,20 +32,54 @@ gunicorn==21.2.0
 h11==0.14.0
 httpcore==0.17.3
 idna==3.4
+importlib-metadata 
+importlib-resources 
+ipykernel 
+ipython 
+ipython-genutils==0.2.0
 itsdangerous==2.1.2
+jedi 
 Jinja2==3.1.2
+jsonschema 
+jsonschema-specifications 
+jupyter_client 
+jupyter_core 
 MarkupSafe==2.1.3
+matplotlib-inline 
+nbformat 
+nest-asyncio 
 numpy==1.25.2
+packaging 
 pandas==2.0.3
+parso 
+pickleshare 
+pkgutil_resolve_name 
+platformdirs 
 plotly==5.15.0
+prompt-toolkit
+psutil
 psycopg2==2.9.9
+pure-eval 
+Pygments
+python-dateutil
 pytz==2023.3
+pywin32==304
+pyzmq 
+referencing 
 requests==2.31.0
 retrying==1.3.4
+rpds-py 
+six 
 sniffio==1.3.0
 SQLAlchemy==2.0.19
+stack-data 
 tenacity==8.2.2
+tornado 
+traitlets 
+typing_extensions 
 tzdata==2023.3
 urllib3==2.0.4
+wcwidth 
 Werkzeug==2.2.3
 WTForms==3.0.1
+zipp 
